# RCV_velodyne_classification

./: CMakeLists.txt  Read me  package.xml
src/: assambled_cloud_classifier.cpp  image_based_cloud_processor.cpp  pointcloud_image_convertor.h  pointshape_based_processor.cpp  pointshape_based_processor.cpp~  velodyne_point_filter.cpp
src/functions/: continuity_filter.h  cross_section_filter.h  histogram_filter.h  normal_filter.h  terrain_function_sturcture.h  xi_functions.h
